Removed unnecessary filter buttons and corrected alignment issues on the gas page

--- a/styles.css
+++ b/styles.css
@@ -156,22 +156,21 @@ body {
 }
 
 #filter-page {
-  width: 70%;
-  height: 14.7%;
-  margin-top: 8px;
-  margin-bottom: 8px;
+  width: 100%;
+  height: 12%;
+  display: inline-block;
 }
 
 .filter-button {
   padding: 8px 10px;
-  margin-right: 4px;
-  margin-bottom: 8px;
   border: none;
   border-radius: 4px;
   font-weight: 550;
   background-color: rgba(0, 0, 0, 0.05);
   transition: background-color 0.1s, color 0.1s;
   cursor: pointer;
+  margin-top: 10px;
+  margin-right: 6px;
 }
 
 .filter-button:hover {
@@ -188,7 +187,7 @@ body {
   padding: 0;
   background-color: rgba(0, 0, 0, 0.05);
   border-radius: 10px;
-  height: 82%;
+  height: 88%;
   width: 100%;
 }
 
